TestCases/ASTTests/SemanticErrorsTests/createTests/read_file_before.dot
digraph AST {
  "138626062299008" [label="Start"];
  "138626062299008" -> "138626062300016";
  "138626062300016" [label="Code"];
  "138626062300016" -> "138626062298576";
  "138626062298576" [label="Function"];
  "138626062298576" -> "138626062292960";
  "138626062298576" -> "138626062289552";
  "138626062298576" -> "138626062298528";
  "138626062292960" [label="main"];
  "138626062289552" [label="Parameters"];
  "138626062298528" [label="Code"];
  "138626062298528" -> "138626062297472";
  "138626062298528" -> "138626062361856";
  "138626062298528" -> "138626062353216";
  "138626062298528" -> "138626062353936";
  "138626062298528" -> "138626062356720";
  "138626062298528" -> "138626062366512";
  "138626062298528" -> "138626062598400";
  "138626062297472" [label="Declaration"];
  "138626062297472" -> "138626062298624";
  "138626062297472" -> "138626062295840";
  "138626062297472" -> "138626062299392";
  "138626062298624" [label="k"];
  "138626062295840" [label="ARRAY"];
  "138626062295840" -> "138626062299248";
  "138626062299248" [label="4"];
  "138626062299392" [label="InitList"];
  "138626062299392" -> "138626062363392";
  "138626062299392" -> "138626062362336";
  "138626062299392" -> "138626062353792";
  "138626062299392" -> "138626062362288";
  "138626062363392" [label="'l'"];
  "138626062362336" [label="'o'"];
  "138626062353792" [label="'c'"];
  "138626062362288" [label="'k'"];
  "138626062361856" [label="Declaration"];
  "138626062361856" -> "138626062359600";
  "138626062361856" -> "138626062362768";
  "138626062359600" [label="c"];
  "138626062362768" [label="Expr"];
  "138626062362768" -> "138626062352976";
  "138626062362768" -> "138626062359744";
  "138626062352976" [label="Expr"];
  "138626062352976" -> "138626062353360";
  "138626062352976" -> "138626062358640";
  "138626062353360" [label="&"];
  "138626062358640" [label="k"];
  "138626062359744" [label="ARRAY"];
  "138626062359744" -> "138626062360608";
  "138626062360608" [label="1"];
  "138626062353216" [label="printf"];
  "138626062353216" -> "138626062360848";
  "138626062353216" -> "138626062357152";
  "138626062360848" [label="\"%c\""];
  "138626062357152" [label="Expr"];
  "138626062357152" -> "138626062358304";
  "138626062357152" -> "138626062356480";
  "138626062358304" [label="*"];
  "138626062356480" [label="c"];
  "138626062353936" [label="Expr"];
  "138626062353936" -> "138626062353696";
  "138626062353936" -> "138626062364832";
  "138626062353936" -> "138626062363536";
  "138626062353696" [label="k"];
  "138626062364832" [label="+"];
  "138626062363536" [label="3"];
  "138626062356720" [label="printf"];
  "138626062356720" -> "138626062356864";
  "138626062356720" -> "138626062364784";
  "138626062356864" [label="\"%c\""];
  "138626062364784" [label="Expr"];
  "138626062364784" -> "138626062362096";
  "138626062364784" -> "138626062365744";
  "138626062362096" [label="*"];
  "138626062365744" [label="Expr"];
  "138626062365744" -> "138626062354848";
  "138626062365744" -> "138626062352592";
  "138626062365744" -> "138626062365360";
  "138626062354848" [label="k"];
  "138626062352592" [label="+"];
  "138626062365360" [label="2"];
  "138626062366512" [label="Expr"];
  "138626062366512" -> "138626062363872";
  "138626062366512" -> "138626062356336";
  "138626062366512" -> "138626062354512";
  "138626062363872" [label="k"];
  "138626062356336" [label="+"];
  "138626062354512" [label="3.14"];
  "138626062598400" [label="Return"];
  "138626062598400" -> "138626062599120";
  "138626062599120" [label="0"];
}
